--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
 
   "repository": {
     "type": "git",
-    "url": "https://github.com/RaminNoorzada/Social-Network.git"
+    "url": "https://github.com/Eugene-Dim/social-network-api"
   },
   "keywords": [],
   "author": "",
